# hamcrafters

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  Readme.md  proxy_output
.github/workflows/: rust.yml
auth/: Cargo.toml
auth/src/: lib.rs
client-handler/: Cargo.toml
client-handler/src/: client_data.rs  client_error.rs  client_handler.rs  lib.rs
coms/: Cargo.toml
coms/src/: client_state.rs  key_store.rs  lib.rs  packet_reader.rs  packet_writer.rs  recording.rs
coms/src/codec/: game_profile.rs  identifier.rs  json_string.rs  mc_uuid.rs  mod.rs  prefixed_array.rs  prefixed_optional.rs  uuid.rs  var_int.rs  var_long.rs  var_uint.rs  var_ulong.rs
coms/src/coms/: deserialize.rs  mod.rs
coms/src/messages/: mod.rs
coms/src/messages/clientbound/: mod.rs  pong_response.rs  status_response.rs
coms/src/messages/clientbound/configuration/: clientbound_keep_alive.rs  clientbound_known_packs.rs  clientbound_plugin_message.rs  feature_flags.rs  finish_configuration.rs  mod.rs  registry_data.rs  update_tags.rs
coms/src/messages/clientbound/login/: cookie_request.rs  disconnect.rs  encryption_request.rs  login_plugin_request.rs  login_success.rs  mod.rs  set_compression.rs
coms/src/messages/clientbound/play/: change_difficulty.rs  entity_event.rs  game_event.rs  initialize_world_border.rs  level_chunk_with_light.rs  list_commands.rs  login.rs  mod.rs  player_abilities.rs  player_info_update.rs  recipe_book_add.rs  recipe_book_settings.rs  server_data.rs  set_center_chunk.rs  set_container_content.rs  set_default_spawn_position.rs  set_entity_equipment.rs  set_entity_metadata.rs  set_experience.rs  set_health.rs  set_held_item.rs  set_ticking_rate.rs  spawn_entity.rs  step_tick.rs  synchronize_player_position.rs  update_advancements.rs  update_attributes.rs  update_entity_position.rs  update_recipes.rs  update_time.rs
coms/src/messages/clientbound/status/: mod.rs  pong_response.rs  status_response.rs
coms/src/messages/models/: angle.rs  data_pack.rs  difficulty.rs  game_mode.rs  id_set.rs  mod.rs  position.rs  recipe.rs  slot.rs  slot_display.rs  text_component.rs  velocity.rs
coms/src/messages/serverbound/: handshake.rs  mod.rs  ping_request.rs
coms/src/messages/serverbound/configuration/: client_information.rs  mod.rs  serverbound_known_packs.rs  serverbound_plugin_message.rs
coms/src/messages/serverbound/handshaking/: handshake.rs  mod.rs
coms/src/messages/serverbound/login/: cookie_response.rs  encryption_response.rs  login_acknowledged.rs  login_plugin_response.rs  login_start.rs  mod.rs
coms/src/messages/serverbound/play/: confirm_teleportation.rs  mod.rs
coms/src/messages/serverbound/status/: mod.rs  ping_request.rs
coms/src/net/: deserialize.rs
coms/src/ser/: deserializer.rs  mod.rs  serializer.rs
coms/src/serial/: deserializer.rs  mod.rs  serializer.rs
mc-codegen/: Cargo.toml
mc-codegen/src/: main.rs  packets.rs
mc-packet/: Cargo.toml
mc-packet-macros/: Cargo.toml
mc-packet-macros/src/: lib.rs
mc-packet/src/: lib.rs
nbt/: Cargo.toml
nbt/src/: error.rs  lib.rs  nbt_named_tag.rs  nbt_types.rs  nbt_value.rs  snbt.rs  tag_type.rs
nbt/src/nbt_value/: deserialize.rs  deserializer.rs  mod.rs  nbt_value.rs  value.rs
nbt/src/ser/: deserializer.rs  mod.rs  serializer.rs
nbt/src/serde/: deserializer.rs  mod.rs
proxy/: Cargo.toml
proxy/src/: lib.rs
server/: Cargo.toml  build.rs  proxy_output
server/src/: main.rs
server/src/encryption/: encryption.rs
sim/: Cargo.toml
sim/tests/: basic_simulation.rs
src/: main.rs
src/codec/: mod.rs  var_int.rs  var_long.rs  var_uint.rs  var_ulong.rs
src/coms/: mod.rs
src/messages/: mod.rs
src/messages/clientbound/: mod.rs  status_response.rs
src/messages/serverbound/: handshake.rs  mod.rs  ping_request.rs
src/serial/: deserializer.rs  mod.rs
world/: Cargo.toml
world/src/save/: anvil.rs  chunk_data.rs  level_dat.rs  mod.rs  player_dat.rs
