[workspace]
resolver = "3"
members = [ "client-handler","coms", "mc-packet-macros", "proxy", "server", "nbt", "world"]

[workspace.dependencies]
mc-coms = { path = "./coms" }
mc-packet-macros = { path = "./mc-packet-macros" }
proxy = { path = "./proxy" }
client-handler = { path = "./client-handler" }
nbt = { path = "./nbt" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
flate2 = "1.1.4"
thiserror = "2.0.17"
uuid = "1.18"
bytes = "1.10"
log = "0.4.28"
pretty_env_logger = "0.5.0"
