[workspace]
resolver = "3"
members = [ "client-handler","coms", "mc-packet-macros", "proxy", "server", "nbt", "world", "auth"]

[workspace.dependencies]
mc-coms = { path = "./coms" }
mc-packet-macros = { path = "./mc-packet-macros" }
mc-auth = { path = "./auth" }
proxy = { path = "./proxy" }
nbt = { path = "./nbt" }
client-handler = { path = "./client-handler" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
flate2 = "1.1.4"
thiserror = "2.0.17"
uuid = "1.18"
bytes = "1.10"
log = "0.4.28"
aes = "0.8"
pretty_env_logger = "0.5.0"
cfb8 = "0.8"
rand = "0.8" # We need 0.8 to be compatible with rsa's dependency on rand_core.
owo-colors = "4.2.3"
