[package]
name = "mc-coms"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
mc-packet-macros = { workspace = true } 
bytes = { workspace = true } 
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
serde_with = "3.15.0"
rsa = "0.9.8"
rsa-der = "0.3.0"
rand = "0.8" # We need 0.8 to be compatible with rsa's dependency on rand_core.
