[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
mc-coms = { workspace = true }
mc-auth = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
owo-colors = { workspace = true }
ron = { workspace = true }
