[package]
name = "mc-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
mc-coms = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true } 
chrono = "0.4.42"
color-eyre = "0.6.5"
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
